public class Item extends Element {
    String name;

    Item(int x, int y, String character) {
        super(x, y, character);
    }
}
